fix AddContact 参数
